<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="this_is_my_first_button">This is my first button</string>
    <string name="this_first_textview">this isn`t my first\n textview</string>
    <string name="hint_mail_mail_com">mail@mail.com</string>


    <string name="app_name">View and ViewGroup</string>

    <string name="solutions_hello_world">Hello World!</string>
    <string name="solutions_box_one_text">Box One</string>
    <string name="solutions_box_two_text">Box Two</string>
    <string name="solutions_box_three_text">Box Three</string>
    <string name="solutions_box_four_text">Box Four</string>
    <string name="solutions_box_five_text">Box Five</string>
    <string name="solutions_button_red_text">Red</string>
    <string name="solutions_button_yellow_text">Yellow</string>
    <string name="solutions_button_green_text">Green</string>
    <string name="linear_view">Linear view</string>
    <string name="constraint_view">Constraint view</string>
</resources>