<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundContainer"
    android:padding="@dimen/size_16dp"
    tools:context=".LessonThreeActivity">

    <TextView
        android:id="@+id/boxOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64dp"
        android:background="@color/colorMyGray"
        android:gravity="center"
        android:padding="@dimen/size_16dp"
        android:text="@string/solutions_box_one_text"
        android:textColor="@color/color_white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:background="@color/colorMyYellow"
        android:gravity="center"
        android:padding="@dimen/size_16dp"
        android:text="@string/solutions_box_two_text"
        android:textColor="@color/color_white"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintBottom_toBottomOf="@id/boxFive"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxOne" />

    <TextView
        android:id="@+id/boxThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMyRed"
        android:text="@string/solutions_box_three_text"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/size_16dp"
        android:padding="@dimen/size_16dp"
        app:layout_constraintBottom_toTopOf="@+id/boxFourth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/boxOne"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/boxFourth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMyGreen"
        android:padding="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/solutions_box_four_text"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@+id/boxFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/boxThree" />

    <TextView
        android:id="@+id/boxFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMyGray"
        android:padding="@dimen/size_16dp"
        android:text="@string/solutions_box_five_text"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/boxFourth" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="boxFive" />

    <Button
        android:id="@+id/boxRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:text="@string/solutions_button_red_text"
        android:textColor="@color/colorMyGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/boxYellow" />

    <Button
        android:id="@+id/boxYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:text="@string/solutions_button_yellow_text"
        android:textColor="@color/colorMyGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/boxRed"
        app:layout_constraintRight_toLeftOf="@id/boxGreen" />

    <Button
        android:id="@+id/boxGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:text="@string/solutions_button_green_text"
        android:textColor="@color/colorMyGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/boxYellow"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>